# Youki

./: .gitignore  .hgignore  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  README  autogen.sh  config.h.cmake  config.h.in  config.status.lineno  configure.ac  info.backtrace.mpx.service.in  info.backtrace.sentinel.service.in  info.backtrace.youki.app.service.in  info.backtrace.youki.mlibman.service.in  info.backtrace.youki.sentinel.service.in  info.backtrace.youki.service.in  mpx.1.in  mpx.pc.in  org.beepmediaplayer.mpx.service.in  org.beepmediaplayer.mpxsentinel.service.in  svn-commit.tmp
api/: CMakeLists.txt  Makefile.am  aque.cc  gstpuid.cc  hal.cc  last-fm-xmlrpc.cc  lyrics-v2.cc  lyrics.cc  md5.c  metadatareader-taglib.cc  playlistparser-pls.cc  playlistparser-xspf.cc  random.cc  services.cc  signals.cc  sql.cc  tagview.cc  treeview-popup.cc  uri.cc  util-file.cc  util-graphics.cc  util-string.cc  xml.cc  xspf-libxml2-sax.cc
cmake/: FindCDSupport.cmake  FindCdparanoia.cmake  FindCxxTR1.cmake  FindHAL.cmake  FindSIDPlay.cmake  FindSMlib.cmake  FindXercesC.cmake  TestForHALPSI.cmake  TestForTR1.cmake  hal-psi-test.cpp
com/: CMakeLists.txt  Makefile.am  album-info-window.cc  mb-import-album.cc  mb-import-album.glade  tagview.cc  view-albums-filter-plugin.cc  view-albums.cc  view-collections.cc
dbus/: Makefile.am  dbus-obj-MLIBMAN.xml  dbus-obj-YOUKI.xml
desktop/: Makefile.am  mpx.desktop.in
glade/: Makefile.am  albuminfowindow.glade  cppmod-mmkeys.glade  cppmod-prefs-audio.glade  cppmod-prefs-library.glade  cppmod-scrobbler.glade  dialog-filebrowser.glade  dialog-simple-entry.glade  equalizer.glade  import-folder.glade  import-share.glade  mlibmanager.glade  mpx.glade  mpx.glade.bak  playlist-plugin-manager.glade  plugin-manager.glade  pluginmanager.glade  preferences.glade  request-value.glade  source-music.glade.bak  source-musiclib.glade  timed-confirmation.glade  trackinfo.glade
icons/: Makefile.am
images/: CMakeLists.txt  Makefile.am
include/: Makefile.am
jnetlib/: CMakeLists.txt  Makefile.am  connection.cpp  httpget.cpp  httpget.h
json/: CMakeLists.txt  Makefile.am
libhal++/: CMakeLists.txt  Makefile.am  context.cc  context.hh  device.cc  device.hh  drive.cc  drive.hh  hal++.hh  storage.hh  util.cc  volume.cc  volume.hh
m4/: ax_define_unquoted.m4  ax_python.m4  boost_base.m4  boost_filesystem.m4  boost_iostreams.m4  boost_python.m4  boost_regex.m4  gstcheck.m4  halcheck.m4  pkg.m4  shave.m4  smlib.m4  soup.m4  sqlite3.m4  tr1.m4  utils.m4
mcs/: CMakeLists.txt  Makefile.am  base.h  gtk-bind.h  key.cpp  key.h  mcs-gtk-bind.cpp  mcs.cpp  subscriber.cpp  subscriber.h
mpx/: Makefile.am  amazon.cc  amazon.hh  artist-images.cc  audio-exception.hh  audio-types.hh  audio.cc  audio.hh  boost.cc  boost.hh  cflags  cflags1  covers-stores.cc  covers.cc  coverstores.cc  dbus-obj-MPX-glue.h  dbus-obj-MPX.xml  dbus-obj-PLAYER.xml  dialog-about.cc  dialog-filebrowser.cc  fix_fft.cc  flow_engine.cc  gstpuid.cc  gstspectrum.cc  gstspectrum.h  gtkmm.cc  hal.cc  hal.hh  import-folder.cc  import-folder.hh  import-share.cc  import-share.hh  infoarea.cc  infoarea.hh  infoarea__private.cc  infoarea__protected.cc  jnethttpsrc.cc  jnethttpsrc.h  last-fm-xmlrpc.cc  last-fm-xmlrpc.hh  (+96 more)
mpx/musicbrainz/: Makefile.am  mbxml-types-v2.hh
mpx/parser/: Makefile.am  libxml2-sax-base.cc
mpxlib/: CMakeLists.txt  Makefile.am  audio.cc  dialog-filebrowser.cc  hal.cc  hal.hh  library-mlibman.cc  library-mlibman.hh  library-scanner-thread-mlibman.cc  library-scanner-thread-mlibman.hh  library-scanner-thread.cc  main.cc  metadatareader-taglib.cc  mlibmanager.cc  mlibmanager.hh  mpx-mlibman-dbus.hh  paths.cc  play.cc  services.cc  sql.cc  util-string.cc
musicbrainz/: CMakeLists.txt  Makefile.am  mbxml-v2.cc  mbxml-v2.hh
po/: CMakeLists.txt  Makefile.in.in  Makevars  POTFILES  POTFILES.in  POTFILES.skip  audiosource.pot  sv.po
python/: CMakeLists.txt  Makefile.am  trackinfo.py
remote/: CMakeLists.txt  Makefile.am  audiosource.cc  mpx-play-files  mpx-play-uris  mpx.cc  youki.cc
schemas/: Makefile.am  xsd-artist-similar.xml  (+6 more)
sentinel/: CMakeLists.txt  Makefile.am  mpx-sentinel.cc  youki-sentinel.cc
src/: CMakeLists.txt  Makefile.am  alltracks.hh  artist-images.cc  audio-types.hh  covers-stores.cc  covers.cc  dbus-obj-MPX.xml  dbus-obj-YOUKI.xml  dbustracklist.cc  dialog-about.cc  dialog-filebrowser.hh  error.cc  glib-marshalers.c  glib-marshalers.h  glib-marshalers.list  hal.cc  infoarea.cc  infoarea.hh  infoarea__private.cc  infoarea__protected.cc  jnethttpsrc.cc  kobo-controller.cc  kobo-controller.hh  kobo-cover.cc  kobo-cover.hh  kobo-main.cc  kobo-main.hh  kobo-position.cc  kobo-position.hh  kobo-titleinfo.cc  kobo-titleinfo.hh  kobo-volume.cc  kobo-volume.hh  library.cc  library.hh  main.cc  markov-analyzer-thread.cc  markov-analyzer-thread.hh  metadatareader-gstreamer.hh  (+44 more)
viewcomponents/: Makefile.am  album-info-window.cc  album-info-window.glade  tagview.cc  view-albums.cc  view-collections.cc
widgets/: CMakeLists.txt  Makefile.am  bmp_status_icon.c  bmp_status_icon.h  bmp_tray_icon.c  bmp_tray_icon.h  cairo-extensions.cc  cairoextensions.cc  cairoextensions.hh  cell-renderer-album-data.cc  cell-renderer-cairo-surface.cc  cell-renderer-count.cc  cell-renderer-expander.c  cell-renderer-vbox.cc  dialog-play-uri.cc  dialog-simple-entry.cc  file-system-tree.cc  gossip-cell-renderer-expander.c  rounded-alignment.cc  rounded-frame.cc  rounded-layout.cc  seekscale.cc  tagview.cc  task-dialog.cc  taskdialog.cc  timed-confirmation.cc  widget-marshalers.c  widget-marshalers.h  youki-status-icon.c  youki-toggle-button.cc  youki-tristate-button.cc
xmlcpp/: CMakeLists.txt  Makefile.am  xsd-artist-similar-2.0.cxx  xsd-artist-similar-2.0.hxx  xsd-artist-similar-2.0.lo  xsd-artist-similar.cxx  xsd-artist-similar.hxx  xsd-artist-toptags.cxx  xsd-artist-toptags.hxx  xsd-fans.cxx  xsd-fans.hxx  xsd-mostknowntracks.cxx  xsd-mostknowntracks.hxx  xsd-profile.cxx  xsd-profile.hxx  xsd-topalbums-2.0.cxx  xsd-topalbums-2.0.hxx  xsd-topalbums.cxx  xsd-topalbums.hxx  xspf.lo
(+456 files in other folders)
